--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,13 @@
     <artifactId>SEDA</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.57</version>
+        </dependency>
+
+    </dependencies>
 
 </project>
